test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
  - port: 80
    targetPort: 5000
